# diffid

./: .gitignore  .pre-commit-config.yaml  404.html  API_PLAN.md  CHANGELOG.md  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  docs-checks.yml  docs.yml  release.yml
algorithms/: index.html
algorithms/optimisers/adam/: index.html
algorithms/optimisers/cmaes/: index.html
algorithms/optimisers/nelder-mead/: index.html
algorithms/samplers/dynamic-nested-sampling/: index.html
algorithms/samplers/metropolis-hastings/: index.html
api-reference/: index.html
api-reference/python/builders/: index.html
api-reference/python/cost-metrics/: index.html
api-reference/python/optimisers/: index.html
api-reference/python/results/: index.html
api-reference/python/samplers/: index.html
api-reference/rust/: index.html
changelog/: index.html
chronopt/: __init__.py
development/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: index.md
docs/algorithms/: index.md
docs/algorithms/optimisers/: adam.md  cmaes.md  nelder-mead.md
docs/algorithms/optimizers/: adam.md  cmaes.md  nelder-mead.md
docs/algorithms/samplers/: dynamic-nested-sampling.md  metropolis-hastings.md
docs/api-reference/: index.md
docs/api-reference/python/: builders.md  cost-metrics.md  optimisers.md  optimizers.md  results.md  samplers.md
docs/api-reference/rust/: index.md
docs/assets/: diffid.drawio
docs/development/: architecture.md  building.md  contributing.md  index.md
docs/examples/: gallery.md
docs/getting-started/: concepts.md  first-ode-fit.md  index.md  installation.md  quickstart.md
docs/guides/: choosing-optimiser.md  choosing-optimizer.md  choosing-sampler.md  cost-metrics.md  custom-solvers.md  diffsol-backend.md  index.md  parallel-execution.md  troubleshooting.md  tuning-optimisers.md  tuning-optimizers.md
docs/tutorials/: index.md
docs/tutorials/notebooks/: 01_optimisation_basics.ipynb  01_optimization_basics.ipynb  02_ode_fitting_diffsol.ipynb  03_parameter_uncertainty.ipynb  04_model_comparison.ipynb  05_advanced_predator_prey.ipynb  06_custom_solver_integration.ipynb  07_parallel_optimisation.ipynb  07_parallel_optimization.ipynb  08_advanced_cost_functions.ipynb  advanced_cost_functions.ipynb  model_comparison.ipynb  ode_fitting_diffsol.ipynb  optimisation_basics.ipynb  parallel_optimisation.ipynb  parameter_uncertainty.ipynb  utils.py
examples/: bicycle_model_diffsol.py  bicycle_model_evidence.py  bouncy_ball.py  bouncy_ball_sampling.py  diffsol_problem.py  logistic_growth.py  model_evidence.py  model_evidence_diffsol.py  predator_prey.py  predator_prey_diffeqpy.py  pure_python_problem.py  python_contour.py  python_problem.py  simple_problem.py
examples/gallery/: index.html
examples/predator_prey/: README.md  generate_data_diffrax.py  predator_prey_diffeqpy.py  predator_prey_diffrax.py  predator_prey_diffsol.py
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/first-ode-fit/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/choosing-optimiser/: index.html
guides/choosing-sampler/: index.html
guides/cost-metrics/: index.html
guides/custom-solvers/: index.html
guides/diffsol-backend/: index.html
guides/parallel-execution/: index.html
guides/troubleshooting/: index.html
guides/tuning-optimisers/: index.html
python/: Cargo.toml  __init__.py  chronopt.pyi  pyproject.toml
python/src/: builders.rs  errors.rs  lib.rs  optimisers.rs  results.rs  samplers.rs
python/src/chronopt/: __init__.py  _chronopt.pyi  errors.py  sampler.pyi  samplers.pyi
python/src/chronopt/plotting/: __init__.py
python/src/diffid/: _diffid.pyi  errors.py  sampler.pyi
rust/: Cargo.toml
rust/benches/: diffsol_benches.rs  optimisers_benches.rs  samplers_benches.rs
rust/src/: common.rs  errors.rs  lib.rs  types.rs
rust/src/builders/: builders_old.rs  diffsol.rs  mod.rs  scalar.rs  vector.rs
rust/src/cost/: mod.rs
rust/src/optimisers/: adam.rs  cmaes.rs  errors.rs  mod.rs  nelder_mead.rs  types.rs
rust/src/problem/: builders.rs  diffsol_problem.rs  diffsol_problem_old.rs  mod.rs
rust/src/sampler/: dynamic_nested.rs  metropolis_hastings.rs  mod.rs
rust/src/sampler/dynamic_nested/: mcmc_proposal.rs  mod.rs  proposals.rs  results.rs  scheduler.rs  state.rs
rust/tests/: diffsol_optimisation.rs  dynamic_nested.rs  dynamic_nested_advanced.rs  optimiser_regressions.rs
search/: search_index.json
src/: lib.rs
tests/: test_diffsol.py  test_docs.py  test_mathematical_suite.py  test_optimisation.py  test_optimisation_api.py  test_optimisation_future.py  test_ppl.py  test_python_autodiff.py
tests/examples/: test_examples.py
tests/integration/: test_diffsol_dynamic_nested_parallel.py  test_diffsol_sampling.py  test_mathematical_suite.py
tests/optimisers/: test_cmaes.py
tests/unit/: test_diffsol.py  test_dynamic_nested_sampler.py  test_optimisation.py  test_optimisation_api.py  test_python_autodiff.py  test_samplers.py  test_vector.py
tests/unit/optimisers/: test_adam.py  test_cmaes.py
tutorials/: index.html
tutorials/notebooks/advanced_cost_functions/: index.html
tutorials/notebooks/advanced_predator_prey/: advanced_predator_prey.ipynb  index.html
tutorials/notebooks/model_comparison/: index.html
tutorials/notebooks/ode_fitting_diffsol/: index.html
tutorials/notebooks/optimisation_basics/: index.html
tutorials/notebooks/parallel_optimisation/: index.html
tutorials/notebooks/parameter_uncertainty/: index.html
