[workspace]
members = ["rust", "python"]
resolver = "2"
default-members = ["rust"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"

[workspace.dependencies]
nalgebra = "0.34.1"
pyo3 = { version = "0.27.1", default-features = false, features = ["macros"] }

[workspace.lints.clippy]
# Enable pedantic lints for higher code quality standards
pedantic = { level = "deny", priority = -1 }

# Specific allows to reduce noise from pedantic
module_name_repetitions = "allow"      # Common in large codebases
similar_names = "allow"                # Scientific code often has x, y, z, etc.
must_use_candidate = "allow"           # Too noisy for mathematical functions
cast_precision_loss = "allow"          # Acceptable in numerical code (usize to f64)
cast_possible_truncation = "allow"     # Acceptable when converting calculated values
cast_sign_loss = "allow"               # Acceptable in constrained numerical contexts
cast_possible_wrap = "allow"           # Acceptable in controlled numerical contexts

# Additional strict lints
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

# Performance and correctness
inefficient_to_string = "warn"
manual_ok_or = "warn"
redundant_closure_for_method_calls = "warn"

# Complexity and style
cognitive_complexity = "warn"
too_many_lines = "warn"

# Selected nursery lints
option_if_let_else = "warn"
suboptimal_flops = "allow"             # Suggested optimisations often reduce readability in tests

# Test-specific allows
float_cmp = "allow"                    # Exact float equality is standard in tests
cast_lossless = "allow"                # i32 to f64 conversions in tests/benchmarks