[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "chronopt"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=1.24.4"]

[project.optional-dependencies]
dev = ["pytest>=8.3.5", "maturin>=1.9,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
