[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "diffid"
requires-python = ">=3.11"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.24.4",
]

[project.optional-dependencies]
jax = [
    "jax==0.4.38; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "jaxlib==0.4.38; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "diffrax>=0.7.0",
]
plotting = [
    "matplotlib>=3.8",
]
diffeqpy = [
    "diffeqpy",
]

[tool.maturin]
manifest-path = "python/Cargo.toml"
module-name = "diffid._diffid"
features = ["extension-module"]
python-source = "python/src"
sdist-include = ["LICENSE", "README.md"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "scipy>=1.16.2",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-jupyter>=0.24.0",
    "pymdown-extensions>=10.7",
    "matplotlib>=3.8",
    "nbconvert>=7.0",
]
examples = [
    # macOS x86_64 + Python < 3.14: diffrax with pinned jax/jaxlib
    "diffrax>=0.7.0; python_version < '3.14' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "jax==0.4.38; python_version < '3.14' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "jaxlib==0.4.38; python_version < '3.14' and sys_platform == 'darwin' and platform_machine == 'x86_64'",

    # All other platforms + Python <= 3.14: diffrax only (jax/jaxlib as transitive deps)
    "diffrax>=0.7.0; python_version <= '3.14' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",

    # Non-JAX dependencies
    "matplotlib>=3.8",
    "scipy>=1.16.2",
    "diffeqpy",
]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["__init__.py"]
fix = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins: Check for Python builtins being used as variables or parameters
    "ARG",  # flake8-unused-arguments: Check for unused function arguments
    "B",    # flake8-bugbear: Find likely bugs and design problems
    "C90",  # mccabe: Check for code complexity
    "E",    # pycodestyle errors
    "F",    # pyflakes: Detect various errors by parsing the source file
    "FURB", # refurb: Modernization suggestions
    "I",    # isort: Check and enforce import ordering
    "ISC",  # flake8-implicit-str-concat: Check for implicit string concatenation
    "PERF", # Perflint: Performance anti-patterns
    "PLE",  # Pylint errors
    "PLR",  # Pylint refactor: Check for code smells and complexity
    "PLW",  # Pylint warnings
    "PT",   # flake8-pytest-style: Check pytest best practices
    "PTH",  # flake8-use-pathlib: Prefer pathlib over os.path
    "RET",  # flake8-return: Check return statement consistency
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify: Suggestions for simplifying code
    "TID",  # flake8-tidy-imports: Validate import hygiene
    "UP",   # pyupgrade: Automatically upgrade syntax for newer versions of Python
    "W",    # pycodestyle warnings
    "SLF001",  # flake8-string-format: Check for private object name access
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "E741",    # Ambiguous variable name
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "ARG001", "PLR2004", "RUF001", "RUF002"]  # Allow private access, unused fixtures, magic values, and Greek letters in tests
"**.ipynb" = ["E402", "E703", "PLR2004", "ARG001", "RUF001"]  # Relax some rules for notebooks

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
