[package]
name = "chronopt-py"
version = "0.1.0"
edition = "2021"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
stubgen = ["pyo3-stub-gen", "pyo3-stub-gen-derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chronopt"
crate-type = ["cdylib", "rlib"]
[dependencies]
pyo3 = { version = "0.26" }
chronopt_core = { package = "chronopt", path = "../rust" }
nalgebra = "0.34.1"
numpy = "0.26"
pyo3-stub-gen = { version = "0.16", optional = true }
pyo3-stub-gen-derive = { version = "0.16", optional = true }

[build-dependencies]
pyo3-build-config = "0.26"

[[bin]]
name = "generate_stubs"
path = "src/bin/generate_stubs.rs"
required-features = ["stubgen"]
