[package]
name = "chronopt-py"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]
stubgen = ["pyo3-stub-gen", "pyo3-stub-gen-derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chronopt"
crate-type = ["cdylib", "rlib"]
[dependencies]
pyo3 = { workspace = true }
chronopt_core = { package = "chronopt", path = "../rust" }
nalgebra.workspace = true
numpy = "0.26"
pyo3-stub-gen = { version = "0.16", optional = true }
pyo3-stub-gen-derive = { version = "0.16", optional = true }

[build-dependencies]
pyo3-build-config = "0.26"

[[bin]]
name = "generate_stubs"
path = "src/bin/generate_stubs.rs"
required-features = ["stubgen"]
