[package]
name = "diffid-py"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "../README.md"

[lints.clippy]
# Inherit workspace pedantic settings
pedantic = { level = "deny", priority = -1 }

# Python FFI-specific allows (override workspace for FFI needs)
needless_pass_by_value = "allow"  # PyO3 functions require owned values
unused_self = "allow"              # PyO3 methods need &self even if unused
match_wildcard_for_single_variants = "allow"  # FFI enums less likely to change
unnecessary_wraps = "allow"        # PyO3 functions often need Result wrapping
missing_panics_doc = "allow"       # PyO3 functions can panic on Python errors
missing_errors_doc = "allow"       # FFI error handling is implicit
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"

[package.metadata.maturin]
name = "diffid"
python-source = "src"
artifact = "dist"

[features]
default = []
extension-module = ["pyo3/extension-module"]
stubgen = ["clap", "pyo3-stub-gen", "pyo3-stub-gen-derive"]

[lib]
name = "_diffid"
crate-type = ["cdylib", "rlib"]
[dependencies]
pyo3 = { workspace = true, default-features = false, features = ["macros"] }
nalgebra.workspace = true
numpy = "0.27"
pyo3-stub-gen = { version = "0.17.2", optional = true }
pyo3-stub-gen-derive = { version = "0.17.2", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }

[target.'cfg(not(windows))'.dependencies]
diffid_core = { package = "diffid", path = "../rust" }

[target.'cfg(windows)'.dependencies]
diffid_core = { package = "diffid", path = "../rust", default-features = false, features = ["cranelift-backend"] }

[build-dependencies]
pyo3-build-config = "0.27.1"

[[bin]]
name = "generate_stubs"
path = "src/bin/generate_stubs.rs"
required-features = ["stubgen"]
