[package]
name = "chronopt"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
diffsol-llvm = []
diffsol-llvm15 = ["diffsol/diffsl-llvm15", "diffsol-llvm"]
diffsol-llvm16 = ["diffsol/diffsl-llvm16", "diffsol-llvm"]
diffsol-llvm17 = ["diffsol/diffsl-llvm17", "diffsol-llvm"]
diffsol-llvm18 = ["diffsol/diffsl-llvm18", "diffsol-llvm"]

[dependencies]
diffsol = { version = "0.6.6", default-features = false, features = ["diffsl-cranelift", "nalgebra", "faer"] }
nalgebra.workspace = true
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
rayon = "1.10"