[package]
name = "chronopt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Time-series optimisation and inference toolkit with differential-system support"
repository = "https://github.com/BradyPlanden/chronopt"
homepage = "https://github.com/BradyPlanden/chronopt"
documentation = "https://docs.rs/chronopt"
readme = "../README.md"
keywords = ["optimisation", "time-series", "differential-equations", "sampler", "inference"]
categories = ["algorithms", "science", "simulation"]
include = ["src/**", "Cargo.toml", "../README.md", "../LICENSE"]

[features]
diffsol-llvm = ["diffsol/diffsl-llvm15"]

[dependencies]
diffsol = { version = "0.6.6", default-features = false, features = ["diffsl-cranelift", "nalgebra", "faer"] }
nalgebra.workspace = true
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
rayon = "1.10"

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }